welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:5: error: not found: type int
	var nbBiscuit : int = 0 ;
                        ^